--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3627,6 +3627,7 @@ blockquote {
 }
 .ie .demo-col-12 {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 .lt-ie8 .demo-col-12 {
   display: inline;
@@ -3646,6 +3647,7 @@ blockquote {
 }
 .ie .demo-col-6 {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 .lt-ie8 .demo-col-6 {
   display: inline;
@@ -3666,6 +3668,7 @@ blockquote {
   }
   .ie .demo-col-6 {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .demo-col-6 {
     display: inline;
@@ -3964,6 +3967,7 @@ img {
   .ie .content_main,
   .ie .content_sidebar {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content_main,
   .lt-ie8 .content_sidebar {
@@ -4000,6 +4004,7 @@ img {
   }
   .ie .content__1-3 .content_main {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content__1-3 .content_main {
     display: inline;
@@ -4021,6 +4026,7 @@ img {
   }
   .ie .content__1-3 .content_sidebar {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content__1-3 .content_sidebar {
     display: inline;
@@ -4040,6 +4046,7 @@ img {
   }
   .ie .content__2-1 .content_main {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
@@ -4059,6 +4066,7 @@ img {
   }
   .ie .content__2-1 .content_sidebar {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content__2-1 .content_sidebar {
     display: inline;
@@ -4085,6 +4093,7 @@ img {
   }
   .ie .content__2-1 .content_main {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
@@ -4950,6 +4959,7 @@ img {
   }
   .ie .hero_card {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .hero_card {
     display: inline;
@@ -4973,6 +4983,7 @@ img {
   }
   .ie .hero_card {
     margin-right: -0.26em;
+    margin-right: 0;
   }
   .lt-ie8 .hero_card {
     display: inline;
