--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4136,6 +4136,7 @@ blockquote {
 
 .ie .demo-col-12 {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .demo-col-12 {
@@ -4158,6 +4159,7 @@ blockquote {
 
 .ie .demo-col-6 {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .demo-col-6 {
@@ -4180,6 +4182,7 @@ blockquote {
 
 .ie .demo-col-6 {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .demo-col-6 {
@@ -4497,6 +4500,7 @@ img {
 .ie .content_main,
 .ie .content_sidebar {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .content_main,
@@ -4528,6 +4532,7 @@ img {
 
 .ie .content__1-3 .content_main {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .content__1-3 .content_main {
@@ -4552,6 +4557,7 @@ img {
 
 .ie .content__1-3 .content_sidebar {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .content__1-3 .content_sidebar {
@@ -4574,6 +4580,7 @@ img {
 
 .ie .content__2-1 .content_main {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .content__2-1 .content_main {
@@ -4596,6 +4603,7 @@ img {
 
 .ie .content__2-1 .content_sidebar {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .content__2-1 .content_sidebar {
@@ -5516,6 +5524,7 @@ img {
 
 .ie .hero_card {
   margin-right: -0.26em;
+  margin-right: 0;
 }
 
 .lt-ie8 .hero_card {
