--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4452,7 +4452,7 @@ img {
 .wrapper {
   width: 100%;
   max-width: 1170px;
-  padding: 0;
+  padding: 0 15px;
   margin: 0 auto;
   position: relative;
   clear: both;
