--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3626,9 +3626,10 @@ blockquote {
   width: 100%;
 }
 .ie .demo-col-12 {
-  margin-right: 0;
+  margin-right: -0.26em;
 }
 .lt-ie8 .demo-col-12 {
+  margin-right: 0;
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3645,9 +3646,10 @@ blockquote {
   width: 100%;
 }
 .ie .demo-col-6 {
-  margin-right: 0;
+  margin-right: -0.26em;
 }
 .lt-ie8 .demo-col-6 {
+  margin-right: 0;
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3665,9 +3667,10 @@ blockquote {
     width: 50%;
   }
   .ie .demo-col-6 {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .demo-col-6 {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3956,10 +3959,11 @@ img {
   }
   .ie .content_main,
   .ie .content_sidebar {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content_main,
   .lt-ie8 .content_sidebar {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3992,9 +3996,10 @@ img {
     left: 25%;
   }
   .ie .content__1-3 .content_main {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content__1-3 .content_main {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4013,9 +4018,10 @@ img {
     right: 75%;
   }
   .ie .content__1-3 .content_sidebar {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content__1-3 .content_sidebar {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4032,9 +4038,10 @@ img {
     width: 66.66666667%;
   }
   .ie .content__2-1 .content_main {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_main {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4051,9 +4058,10 @@ img {
     width: 33.33333333%;
   }
   .ie .content__2-1 .content_sidebar {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_sidebar {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4077,9 +4085,10 @@ img {
     padding-right: 8.33333333%;
   }
   .ie .content__2-1 .content_main {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_main {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4942,9 +4951,10 @@ img {
     left: 50%;
   }
   .ie .hero_card {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .hero_card {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4965,9 +4975,10 @@ img {
     left: 66.66666667%;
   }
   .ie .hero_card {
-    margin-right: 0;
+    margin-right: -0.26em;
   }
   .lt-ie8 .hero_card {
+    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
