Removing IE tests.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3629,7 +3629,6 @@ blockquote {
   margin-right: -0.26em;
 }
 .lt-ie8 .demo-col-12 {
-  margin-right: 0;
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3649,7 +3648,6 @@ blockquote {
   margin-right: -0.26em;
 }
 .lt-ie8 .demo-col-6 {
-  margin-right: 0;
   display: inline;
   *zoom: 1;
   *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3670,14 +3668,11 @@ blockquote {
     margin-right: -0.26em;
   }
   .lt-ie8 .demo-col-6 {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-/* Grid test
-   ========================================================================== */
 /* Base styles
    ========================================================================== */
 img {
@@ -3925,11 +3920,18 @@ img {
 @media only all and (min-width: 50.0625em) {
   .wrapper {
     width: 100%;
-    max-width: 1170px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
     position: relative;
     clear: both;
+  }
+  .lt-ie8 .wrapper {
+    *zoom: 1;
+    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .lt-ie8 .wrapper {
@@ -3963,7 +3965,6 @@ img {
   }
   .lt-ie8 .content_main,
   .lt-ie8 .content_sidebar {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -3999,7 +4000,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .content__1-3 .content_main {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4021,7 +4021,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .content__1-3 .content_sidebar {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4041,7 +4040,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_main {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4061,7 +4059,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_sidebar {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4088,7 +4085,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .content__2-1 .content_main {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4954,7 +4950,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .hero_card {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
@@ -4978,7 +4973,6 @@ img {
     margin-right: -0.26em;
   }
   .lt-ie8 .hero_card {
-    margin-right: 0;
     display: inline;
     *zoom: 1;
     *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
