Updates cf-grid for ie fix.

--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -69,16 +69,16 @@
 }
 
 .demo-cols {
-    .nested-col-group();
+    .grid_nested-col-group();
 }
 
 .demo-col-12 {
-    .column(12);
+    .grid_column(12);
 }
 
 .demo-col-6 {
-    .column(12);
+    .grid_column(12);
     .u-respond-to-min(480px, {
-        .column(6);
+        .grid_column(6);
     });
 }
