--- a/static/css/main.css
+++ b/static/css/main.css
@@ -809,39 +809,35 @@ input.btn::-moz-focus-inner {
     - name: Button icon left
       markup: |
         <a href="#" class="btn">
-            <i class="btn-icon-left icon-chevron-left"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-left cf-icon cf-icon-left"></span>
             Anchor Tag
         </a>
         <button class="btn">
-            <i class="btn-icon-left icon-chevron-left"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-left cf-icon cf-icon-left"></span>
             Button Tag
         </button>
     - name: Button icon right
       markup: |
         <a href="#" class="btn">
             Anchor Tag
-            <i class="btn-icon-right icon-chevron-right"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-right cf-icon cf-icon-right"></span>
         </a>
         <button class="btn">
             Button Tag
-            <i class="btn-icon-right icon-chevron-right"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-right cf-icon cf-icon-right"></span>
         </button>
     - name: Just an icon
       markup: |
         <a href="#" class="btn">
-            <i class="icon-search"><span class="jekyll-bug"></span></i>
+            <span class="cf-icon cf-icon-search"></span>
         </a>
         <button class="btn">
-            <i class="icon-search"><span class="jekyll-bug"></span></i>
+            <span class="cf-icon cf-icon-search"></span>
         </button>
     tags:
     - cf-buttons
     - fj-icons
 */
-.btn [class^="icon-"],
-.btn [class*="icon-"] {
-  line-height: 1;
-}
 .btn-icon-left {
   padding: 0 0.75em 0 0;
   border-right: 1px solid #ffffff;
@@ -930,31 +926,31 @@ input.btn::-moz-focus-inner {
       markup: |
         <div class="btn-group">
             <a href="#" class="btn">Anchor</a>
-            <a href="#" class="btn btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn">Button</button>
-            <button class="btn btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div><br>
     - name: Secondary button style
       markup: |
         <div class="btn-group">
             <a href="#" class="btn btn-secondary">Anchor</a>
-            <a href="#" class="btn btn-secondary btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-secondary btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn btn-secondary">Button</button>
-            <button class="btn btn-secondary btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-secondary btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div>
     - name: Super button style
       markup: |
         <div class="btn-group">
             <a href="#" class="btn btn-super">Anchor</a>
-            <a href="#" class="btn btn-super btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-super btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn btn-super">Button</button>
-            <button class="btn btn-super btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-super btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div>
     tags:
     - cf-buttons
@@ -1694,24 +1690,24 @@ textarea {
   family: "cf-grid"
   patterns:
     - codenotes:
-        - "@box-sizing-polyfill-path: '/cf-grid/custom-demo/static/css';"
+        - "@grid_box-sizing-polyfill-path: '/cf-grid/custom-demo/static/css';"
       notes:
         - "The path where boxsizing.htc is located."
         - "This path MUST be overridden in your project and set to a root relative url."
     - codenotes:
-        - "@wrapper-width: 1200px;"
+        - "@grid_wrapper-width: 1200px;"
       notes:
         - "The grid's maximum width in px."
     - codenotes:
-        - "@gutter-width: 30px;"
+        - "@grid_gutter-width: 30px;"
       notes:
         - "The fixed width between columns."
     - codenotes:
-        - "@total-columns: 12;"
+        - "@grid_total-columns: 12;"
       notes:
         - "The total number of columns used in calculating column widths."
     - codenotes:
-        - "@debug"
+        - "@grid_debug"
       notes:
         - "Gives column blocks a background color if set to true."
   tags:
@@ -1723,13 +1719,13 @@ textarea {
     - "Wrappers are centered containers with a max-width and fixed gutters
       that match the gutter widths of columns."
     - "To support IE 6/7, ensure that the path to boxsizing.htc is set using
-      the @box-sizing-polyfill-path Less variable.
+      the @grid_box-sizing-polyfill-path Less variable.
       Read more: https://github.com/Schepp/box-sizing-polyfill."
   family: "cf-grid"
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".wrapper( @wrapper-width: @wrapper-width )"
+        - ".grid_wrapper( @grid_wrapper-width: @grid_wrapper-width )"
       notes:
         - "You can create wrappers with different max-widths by passing a pixel
           value into the mixin."
@@ -1737,10 +1733,10 @@ textarea {
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .wide-wrapper {
-            .wrapper( 1900px );
+            .grid_wrapper( 1900px );
           }
         - |
           <div class="main-wrapper">
@@ -1758,7 +1754,7 @@ textarea {
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".column( @columns: 1; @total: @total-columns; @prefix: 0; @suffix: 0 )"
+        - ".grid_column( @columns: 1; @total: @grid_total-columns; @prefix: 0; @suffix: 0 )"
       notes:
         - "Computes column widths and prefix/suffix padding."
         - "CSS borders are used for fixed gutters."
@@ -1766,10 +1762,10 @@ textarea {
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .half {
-            .column(1, 2);
+            .grid_column(1, 2);
           }
         - |
           <div class="main-wrapper">
@@ -1787,18 +1783,18 @@ textarea {
   family: "cf-grid"
   patterns:
     - codenotes:
-        - ".push( @offset: 1, @total-columns: @total-columns )"
-        - ".pull( @offset: 1, @total-columns: @total-columns )"
+        - ".push( @offset: 1, @grid_total-columns: @grid_total-columns )"
+        - ".pull( @offset: 1, @grid_total-columns: @grid_total-columns )"
     - name: "Usage"
       codenotes:
         - |
           .first {
-            .column(1, 2);
-            .pull(1)l
+            .grid_column(1, 2);
+            .grid_pull(1);
           }
           .second {
-            .column(1, 2);
-            .push(1)l
+            .grid_column(1, 2);
+            .grid_push(1);
           }
         - |
           <div>
@@ -1816,7 +1812,7 @@ textarea {
       Normally this is removed with complex selectors or by adding classes
       to the first and last column per 'row'.
       In cf-grid the way to get around this is by wrapping your columns in a
-      container that utilizes the .nested-col-group() mixin.
+      container that utilizes the .grid_nested-col-group() mixin.
       This mixin uses negative left and right margins to pull the columns back
       into alignment with parent columns."
     - "NOTE: Working this way allows you to easily create responsive grids.
@@ -1830,18 +1826,18 @@ textarea {
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".nested-col-group()"
+        - ".grid_nested-col-group()"
     - name: "Usage"
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .cols {
-            .nested-col-group();
+            .grid_nested-col-group();
           }
           .half {
-            .column(1, 2);
+            .grid_column(1, 2);
           }
         - |
           <div class="main-wrapper">
@@ -3246,6 +3242,7 @@ a.hover {
 a:focus,
 a.focus {
   border-bottom-style: solid;
+  outline: thin dotted;
 }
 a:active,
 a.active {
@@ -3630,8 +3627,9 @@ blockquote {
 }
 .lt-ie8 .demo-col-12 {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 .demo-col-6 {
   display: inline-block;
@@ -3649,8 +3647,9 @@ blockquote {
 }
 .lt-ie8 .demo-col-6 {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 @media only all and (min-width: 30em) {
   .demo-col-6 {
@@ -3669,8 +3668,9 @@ blockquote {
   }
   .lt-ie8 .demo-col-6 {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 /* Base styles
@@ -3920,18 +3920,11 @@ img {
 @media only all and (min-width: 50.0625em) {
   .wrapper {
     width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    max-width: 1200px;
+    max-width: 1170px;
     padding: 0 15px;
     margin: 0 auto;
     position: relative;
     clear: both;
-  }
-  .lt-ie8 .wrapper {
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .lt-ie8 .wrapper {
@@ -3966,8 +3959,9 @@ img {
   .lt-ie8 .content_main,
   .lt-ie8 .content_sidebar {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 .header .demo-placeholder,
@@ -4001,8 +3995,9 @@ img {
   }
   .lt-ie8 .content__1-3 .content_main {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__1-3 .content_sidebar {
     display: inline-block;
@@ -4022,8 +4017,9 @@ img {
   }
   .lt-ie8 .content__1-3 .content_sidebar {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__2-1 .content_main {
     display: inline-block;
@@ -4041,8 +4037,9 @@ img {
   }
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content__2-1 .content_sidebar {
     display: inline-block;
@@ -4060,8 +4057,9 @@ img {
   }
   .lt-ie8 .content__2-1 .content_sidebar {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .content_main,
   .content_sidebar {
@@ -4086,8 +4084,9 @@ img {
   }
   .lt-ie8 .content__2-1 .content_main {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
   .lt-ie8 .content__2-1 .content_main {
     padding-right: 0;
@@ -4951,8 +4950,9 @@ img {
   }
   .lt-ie8 .hero_card {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 @media only all and (min-width: 64em) {
@@ -4974,8 +4974,9 @@ img {
   }
   .lt-ie8 .hero_card {
     display: inline;
-    *zoom: 1;
-    *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 /* topdoc
