--- a/static/css/media-object.less
+++ b/static/css/media-object.less
@@ -45,7 +45,7 @@
     .u-respond-to-min(600px, {
         position: relative;
         min-height: unit((@img-size + 4px) / @base-font-size-px, em);
-        padding-left: unit((@img-size + @gutter-width) / @base-font-size-px, em);
+        padding-left: unit((@img-size + @grid_gutter-width) / @base-font-size-px, em);
     });
 
     &_image-container {
