--- a/static/css/post.less
+++ b/static/css/post.less
@@ -415,11 +415,11 @@
             .u-right();
             width: unit(250px / @base-font-size-px, em);
             margin-top: unit(5px / @base-font-size-px, em);
-            margin-left: unit(@gutter-width / @base-font-size-px, em);
+            margin-left: unit(@grid_gutter-width / @base-font-size-px, em);
         });
         .u-respond-to-min(1200px, {
             & {
-                margin-right: -@gutter-width;
+                margin-right: -@grid_gutter-width;
             }
         });
     }
