--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -972,40 +972,35 @@ input.btn::-moz-focus-inner {
     - name: Button icon left
       markup: |
         <a href="#" class="btn">
-            <i class="btn-icon-left icon-chevron-left"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-left cf-icon cf-icon-left"></span>
             Anchor Tag
         </a>
         <button class="btn">
-            <i class="btn-icon-left icon-chevron-left"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-left cf-icon cf-icon-left"></span>
             Button Tag
         </button>
     - name: Button icon right
       markup: |
         <a href="#" class="btn">
             Anchor Tag
-            <i class="btn-icon-right icon-chevron-right"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-right cf-icon cf-icon-right"></span>
         </a>
         <button class="btn">
             Button Tag
-            <i class="btn-icon-right icon-chevron-right"><span class="jekyll-bug"></span></i>
+            <span class="btn-icon-right cf-icon cf-icon-right"></span>
         </button>
     - name: Just an icon
       markup: |
         <a href="#" class="btn">
-            <i class="icon-search"><span class="jekyll-bug"></span></i>
+            <span class="cf-icon cf-icon-search"></span>
         </a>
         <button class="btn">
-            <i class="icon-search"><span class="jekyll-bug"></span></i>
+            <span class="cf-icon cf-icon-search"></span>
         </button>
     tags:
     - cf-buttons
     - fj-icons
 */
-
-.btn [class^="icon-"],
-.btn [class*="icon-"] {
-  line-height: 1;
-}
 
 .btn-icon-left {
   padding: 0 0.75em 0 0;
@@ -1105,31 +1100,31 @@ input.btn::-moz-focus-inner {
       markup: |
         <div class="btn-group">
             <a href="#" class="btn">Anchor</a>
-            <a href="#" class="btn btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn">Button</button>
-            <button class="btn btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div><br>
     - name: Secondary button style
       markup: |
         <div class="btn-group">
             <a href="#" class="btn btn-secondary">Anchor</a>
-            <a href="#" class="btn btn-secondary btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-secondary btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn btn-secondary">Button</button>
-            <button class="btn btn-secondary btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-secondary btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div>
     - name: Super button style
       markup: |
         <div class="btn-group">
             <a href="#" class="btn btn-super">Anchor</a>
-            <a href="#" class="btn btn-super btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></a>
+            <a href="#" class="btn btn-super btn-compound-action"><span class="cf-icon cf-icon-down"></span></a>
         </div><br>
         <div class="btn-group">
             <button class="btn btn-super">Button</button>
-            <button class="btn btn-super btn-compound-action"><i class="icon-caret-down"><span class="jekyll-bug"></span></i></button>
+            <button class="btn btn-super btn-compound-action"><span class="cf-icon cf-icon-down"></span></button>
         </div>
     tags:
     - cf-buttons
@@ -1938,24 +1933,24 @@ textarea {
   family: "cf-grid"
   patterns:
     - codenotes:
-        - "@box-sizing-polyfill-path: '/cf-grid/custom-demo/static/css';"
+        - "@grid_box-sizing-polyfill-path: '/cf-grid/custom-demo/static/css';"
       notes:
         - "The path where boxsizing.htc is located."
         - "This path MUST be overridden in your project and set to a root relative url."
     - codenotes:
-        - "@wrapper-width: 1200px;"
+        - "@grid_wrapper-width: 1200px;"
       notes:
         - "The grid's maximum width in px."
     - codenotes:
-        - "@gutter-width: 30px;"
+        - "@grid_gutter-width: 30px;"
       notes:
         - "The fixed width between columns."
     - codenotes:
-        - "@total-columns: 12;"
+        - "@grid_total-columns: 12;"
       notes:
         - "The total number of columns used in calculating column widths."
     - codenotes:
-        - "@debug"
+        - "@grid_debug"
       notes:
         - "Gives column blocks a background color if set to true."
   tags:
@@ -1968,13 +1963,13 @@ textarea {
     - "Wrappers are centered containers with a max-width and fixed gutters
       that match the gutter widths of columns."
     - "To support IE 6/7, ensure that the path to boxsizing.htc is set using
-      the @box-sizing-polyfill-path Less variable.
+      the @grid_box-sizing-polyfill-path Less variable.
       Read more: https://github.com/Schepp/box-sizing-polyfill."
   family: "cf-grid"
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".wrapper( @wrapper-width: @wrapper-width )"
+        - ".grid_wrapper( @grid_wrapper-width: @grid_wrapper-width )"
       notes:
         - "You can create wrappers with different max-widths by passing a pixel
           value into the mixin."
@@ -1982,10 +1977,10 @@ textarea {
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .wide-wrapper {
-            .wrapper( 1900px );
+            .grid_wrapper( 1900px );
           }
         - |
           <div class="main-wrapper">
@@ -2004,7 +1999,7 @@ textarea {
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".column( @columns: 1; @total: @total-columns; @prefix: 0; @suffix: 0 )"
+        - ".grid_column( @columns: 1; @total: @grid_total-columns; @prefix: 0; @suffix: 0 )"
       notes:
         - "Computes column widths and prefix/suffix padding."
         - "CSS borders are used for fixed gutters."
@@ -2012,10 +2007,10 @@ textarea {
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .half {
-            .column(1, 2);
+            .grid_column(1, 2);
           }
         - |
           <div class="main-wrapper">
@@ -2034,18 +2029,18 @@ textarea {
   family: "cf-grid"
   patterns:
     - codenotes:
-        - ".push( @offset: 1, @total-columns: @total-columns )"
-        - ".pull( @offset: 1, @total-columns: @total-columns )"
+        - ".push( @offset: 1, @grid_total-columns: @grid_total-columns )"
+        - ".pull( @offset: 1, @grid_total-columns: @grid_total-columns )"
     - name: "Usage"
       codenotes:
         - |
           .first {
-            .column(1, 2);
-            .pull(1)l
+            .grid_column(1, 2);
+            .grid_pull(1);
           }
           .second {
-            .column(1, 2);
-            .push(1)l
+            .grid_column(1, 2);
+            .grid_push(1);
           }
         - |
           <div>
@@ -2064,7 +2059,7 @@ textarea {
       Normally this is removed with complex selectors or by adding classes
       to the first and last column per 'row'.
       In cf-grid the way to get around this is by wrapping your columns in a
-      container that utilizes the .nested-col-group() mixin.
+      container that utilizes the .grid_nested-col-group() mixin.
       This mixin uses negative left and right margins to pull the columns back
       into alignment with parent columns."
     - "NOTE: Working this way allows you to easily create responsive grids.
@@ -2078,18 +2073,18 @@ textarea {
   patterns:
     - name: "Less mixin"
       codenotes:
-        - ".nested-col-group()"
+        - ".grid_nested-col-group()"
     - name: "Usage"
       codenotes:
         - |
           .main-wrapper {
-            .wrapper();
+            .grid_wrapper();
           }
           .cols {
-            .nested-col-group();
+            .grid_nested-col-group();
           }
           .half {
-            .column(1, 2);
+            .grid_column(1, 2);
           }
         - |
           <div class="main-wrapper">
@@ -3722,6 +3717,7 @@ a.hover {
 a:focus,
 a.focus {
   border-bottom-style: solid;
+  outline: thin dotted;
 }
 
 a:active,
@@ -4140,8 +4136,9 @@ blockquote {
 
 .lt-ie8 .demo-col-12 {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4162,8 +4159,9 @@ blockquote {
 
 .lt-ie8 .demo-col-6 {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -4184,8 +4182,9 @@ blockquote {
 
 .lt-ie8 .demo-col-6 {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* Base styles
@@ -4448,19 +4447,11 @@ img {
 
 .wrapper {
   width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  max-width: 1200px;
+  max-width: 1170px;
   padding: 0 15px;
   margin: 0 auto;
   position: relative;
   clear: both;
-}
-
-.lt-ie8 .wrapper {
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .lt-ie8 .wrapper {
@@ -4499,8 +4490,9 @@ img {
 .lt-ie8 .content_main,
 .lt-ie8 .content_sidebar {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .header .demo-placeholder,
@@ -4529,8 +4521,9 @@ img {
 
 .lt-ie8 .content__1-3 .content_main {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_sidebar {
@@ -4553,8 +4546,9 @@ img {
 
 .lt-ie8 .content__1-3 .content_sidebar {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_main {
@@ -4575,8 +4569,9 @@ img {
 
 .lt-ie8 .content__2-1 .content_main {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_sidebar {
@@ -4597,8 +4592,9 @@ img {
 
 .lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_main,
@@ -5517,8 +5513,9 @@ img {
 
 .lt-ie8 .hero_card {
   display: inline;
-  *zoom: 1;
-  *behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* topdoc
