--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -5434,6 +5434,19 @@ img {
   background-color: #75787b;
 }
 
+.hero_wrapper {
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  clear: both;
+}
+
+.lt-ie9 .hero_wrapper {
+  min-width: 800px;
+  max-width: 960px;
+}
+
 .hero_img-container {
   display: none;
   line-height: 1;
