--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -204,6 +204,10 @@
     overflow: hidden;
     background-color: @gray;
 
+    &_wrapper {
+        .wrapper;
+    }
+
     // The image container is needed to suppress loading of the images until
     // they are needed. Research: http://timkadlec.com/2012/04/media-query-asset-downloading-results/
     &_img-container {
