--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6651,6 +6651,10 @@ a.focus .summary_header {
   margin-bottom: 1.875em;
 }
 
+.post-preview-filters .expandable_header {
+  margin-bottom: 0.9375em;
+}
+
 /* topdoc
   name: Post previews
   family: cfgov-blog-docs
