--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6655,6 +6655,59 @@ a.focus .summary_header {
   margin-bottom: 0.9375em;
 }
 
+.post-preview-filters .filter_wrapper {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.post-preview-filters .filter_col {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+}
+
+.ie .post-preview-filters .filter_col {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .post-preview-filters .filter_col {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.post-preview-filters .filter_col {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
+}
+
+.ie .post-preview-filters .filter_col {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .post-preview-filters .filter_col {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
 /* topdoc
   name: Post previews
   family: cfgov-blog-docs
